@@ -17,19 +17,26 @@
 '''
 
 import re
+import xbmc
 from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 from resources.lib.decrypters.kvsplayer import kvs_decode
 
 site = AdultSite('theyarehuge', '[COLOR hotpink]They Are Huge[/COLOR]', 'https://www.theyarehuge.com/', 'https://www.theyarehuge.com/static/images/tah-logo-m.png', 'theyarehuge')
+tahlogged = 'true' in utils.addon.getSetting('tahlogged')
+getinput = utils._get_keyboard
 
 
 @site.register(default_mode=True)
-def Main(url):
+def Main():
     site.add_dir('[COLOR hotpink]Most Popular[/COLOR]', site.url + 'popular.porn-video/?mode=async&function=get_block&block_id=list_videos_common_videos_list&sort_by=video_viewed&from=1', 'List', site.img_cat, page=1)
     site.add_dir('[COLOR hotpink]Tags[/COLOR]', site.url + 'porn-video.tags/', 'Tags', site.img_cat)
     site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + 'search/', 'Search', site.img_search)
+    if not tahlogged:
+        site.add_dir('[COLOR hotpink]Login[/COLOR]', '', 'TAHLogin', '', Folder=False)
+    else:
+        site.add_dir('[COLOR hotpink]Logout[/COLOR]', '', 'TAHLogin', '', Folder=False)
     List(site.url + 'latest-updates/?mode=async&function=get_block&block_id=list_videos_latest_videos_list&sort_by=post_date&from=1', 1)
     utils.eod()
 
@@ -38,7 +45,7 @@ def Main(url):
 def List(url, page=1):
     try:
         listhtml = utils.getHtml(url, '')
-    except:
+    except Exception:
         return None
 
     match = re.compile(r'href="https://www\.theyarehuge\.com/([^"]+)"\s+title="Big\s+Boobs\s+Porn\s+Video\s+([^"]+)".*?src="([^"]+)".*?duration">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
@@ -48,7 +55,7 @@ def List(url, page=1):
 
         contextmenu = []
         contexturl = (utils.addon_sys
-                      + "?mode=" + str('theyarehuge.Lookupinfo')
+                      + "?mode=theyarehuge.Lookupinfo"
                       + "&url=" + urllib_parse.quote_plus(videopage))
         contextmenu.append(('[COLOR deeppink]Lookup info[/COLOR]', 'RunPlugin(' + contexturl + ')'))
 
@@ -67,9 +74,9 @@ def List(url, page=1):
 
 @site.register()
 def Playvid(url, name, download=None):
+    html = utils.getHtml(url, site.url)
     vp = utils.VideoPlayer(name, download)
     vp.progress.update(25, "[CR]Loading video page[CR]")
-    html = utils.getHtml(url, site.url)
     sources = {}
     license = re.compile(r"license_code:\s*'([^']+)", re.DOTALL | re.IGNORECASE).findall(html)[0]
     patterns = [r"video_url:\s*'([^']+)[^;]+?video_url_text:\s*'([^']+)",
@@ -83,20 +90,23 @@ def Playvid(url, name, download=None):
                 continue
             qual = '00' if qual == 'preview' else qual
             surl = kvs_decode(surl, license)
-            sources.update({qual: surl})
+            sources[qual] = surl
     videourl = utils.selector('Select quality', sources, setting_valid='qualityask', sort_by=lambda x: 1081 if x == '4k' else int(x[:-1]), reverse=True)
 
     if not videourl:
         vp.progress.close()
         return
-    vp.play_from_direct_link(videourl + '|referer=' + url)
+    if '720p' in videourl and tahlogged:
+        vp.play_from_direct_link(videourl + '|referer=' + url + '&Cookie=' + get_cookies() + '&User-Agent=' + utils.USER_AGENT)
+    else:
+        vp.play_from_direct_link(videourl + '|referer=' + url + '&User-Agent=' + utils.USER_AGENT)
 
 
 @site.register()
 def Tags(url):
     try:
         taghtml = utils.getHtml(url, '')
-    except:
+    except Exception:
         return None
     htmlmatch = re.compile('list-tags">(.*?)footer', re.DOTALL | re.IGNORECASE).findall(taghtml)
     match = re.compile(r'/(porn-video\.tags/[^"]+)">([^<]+)<', re.DOTALL | re.IGNORECASE).findall(htmlmatch[0])
@@ -111,7 +121,7 @@ def Tags(url):
 def Search(url, keyword=None):
     searchUrl = url
     if not keyword:
-        site.search_dir(url, 'Search')
+        site.search_dir(searchUrl, 'Search')
     else:
         title = keyword.replace(' ', '-')
         searchUrl = searchUrl + title + '/?mode=async&function=get_block&block_id=list_videos_videos_list_search_result&sort_by=post_date&from_videos=1'
@@ -132,3 +142,68 @@ def Lookupinfo(url):
 
     lookupinfo = TabootubeLookup(site.url, url, 'theyarehuge.List', lookup_list)
     lookupinfo.getinfo()
+
+
+@site.register()
+def TAHLogin(logged=True):
+    tahlogged = utils.addon.getSetting('tahlogged')
+    if not logged:
+        tahlogged = False
+        utils.addon.setSetting('tahlogged', 'false')
+
+    if not tahlogged or 'false' in tahlogged:
+        tahuser = utils.addon.getSetting('tahuser') or ''
+        tahpass = utils.addon.getSetting('tahpass') or ''
+        if tahuser == '':
+            tahuser = getinput(default=tahuser, heading='Input your They are huge username')
+            tahpass = getinput(default=tahpass, heading='Input your They are Huge password', hidden=True)
+
+        loginurl = '{0}login/'.format(site.url)
+        postRequest = {'action': 'login',
+                       'email_link': '{0}email/'.format(site.url),
+                       'format': 'json',
+                       'mode': 'async',
+                       'pass': tahpass,
+                       'remember_me': '1',
+                       'username': tahuser}
+        response = utils._postHtml(loginurl, form_data=postRequest)
+        if 'success' in response.lower():
+            utils.addon.setSetting('tahlogged', 'true')
+            utils.addon.setSetting('tahuser', tahuser)
+            utils.addon.setSetting('tahpass', tahpass)
+            success = True
+        else:
+            utils.notify('Failure logging in', 'Failure, please check your username or password')
+            utils.addon.setSetting('tahuser', '')
+            utils.addon.setSetting('tahpass', '')
+            success = False
+    else:
+        clear = utils.selector('Clear stored user & password?', ['Yes', 'No'], reverse=True)
+        if clear:
+            if clear == 'Yes':
+                utils.addon.setSetting('tahuser', '')
+                utils.addon.setSetting('tahpass', '')
+            utils.addon.setSetting('tahlogged', 'false')
+            utils._getHtml(site.url + 'logout/')
+            contexturl = (utils.addon_sys
+                          + "?mode=theyarehuge.Main")
+            xbmc.executebuiltin('Container.Update(' + contexturl + ')')
+    if logged:
+        xbmc.executebuiltin('Container.Refresh')
+    else:
+        return success
+
+
+def get_cookies():
+    domain = site.url.split('www')[-1][:-1]
+    cookiestr = 'kt_tcookie=1'
+    for cookie in utils.cj:
+        if cookie.domain == domain and cookie.name == 'PHPSESSID':
+            cookiestr += '; PHPSESSID=' + cookie.value
+        if cookie.domain == domain and cookie.name == 'kt_ips':
+            cookiestr += '; kt_ips=' + cookie.value
+        if cookie.domain == domain and cookie.name == 'kt_member':
+            cookiestr += '; kt_member=' + cookie.value
+    if tahlogged and 'kt_member' not in cookiestr:
+        TAHLogin(False)
+    return cookiestr
