@@ -3,3 +3,4 @@ Supjav - fix listing
 Whereismyporn - fix listing
 LatestPorn - fix listing
 Pornhits - fix listing and added Lookup info contextmenu
+They Are Huge - login added, for 720p playback
